# planebrane

./: .env.example  README.md  planebrane.bat  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/routes/: __init__.py  auth.py  export.py  images.py  models3d.py  patterns.py  points.py
app/core/classification/: __init__.py  circular.py  linear.py  mixed.py  polygonal.py
app/core/geometry3d/: __init__.py  exporters.py  generators.py  mapping.py  primitives.py  transformations.py  vertex_mapper.py
app/core/image_analysis/: __init__.py  edge_detection.py  geometry_extractor.py  preprocessor.py  symmetry.py  tracer.py
app/core/point_extraction/: __init__.py
app/core/topology/: __init__.py  analyzer.py  intent.py
docs/: algorithms.md  line_width_fix.md
frontend/: CYMATIC_ANIMATION.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json  shader-test.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdjustSection.tsx  AnalysisSection.tsx  CropImageDialog.tsx  CymaticGeometry.tsx  CymaticShaderMaterial.tsx  ExportSection.tsx  FlowerOfLifeIcon.tsx  Layout.tsx  ShaderTest.tsx  StepIndicator.tsx  TesseractIcon.tsx  TorusIcon.tsx  UploadSection.tsx  View3DSection.tsx
frontend/src/hooks/: use3DModel.ts  useAdjustPoints.ts
frontend/src/lib/: api.ts
frontend/src/store/: useAppStore.ts
tests/: conftest.py  verify_topology.py
tests/unit/: __init__.py  test_edge_detection.py  test_geometry3d.py  test_seamless_embeddings.py  test_tracer.py  test_vertex_mapper.py
(+1 files in other folders)
